# winnow

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
app/: bootstrap.py  main.py
app/api/: deps.py  errors.py
app/api/v1/: finalization.py  health.py  results.py  router.py  submissions.py  supersede.py  tasks.py  voting.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/db/migrations/: alembic.ini  env.py
app/governance/: base.py
app/governance/projects/: trees.py
app/models/: __init__.py  base.py  project_config.py  scoring_result.py  scoring_snapshot.py  status_ledger.py  submission.py  submission_user_snapshot.py  submission_vote.py  webhook_outbox.py
app/registry/: __init__.py  base.py  manager.py
app/registry/projects/: __init__.py  trees.py
app/schemas/: envelope.py  errors.py  finalization.py  results.py  supersede.py  tasks.py  voting.py  webhooks.py
app/scoring/: base.py  pipeline.py  registry.py
app/services/: governance_service.py  scoring_service.py  submission_service.py  voting_service.py  webhook_service.py
app/tests/: conftest.py  test_schemas.py
docs/architecture/: 00_overview.md  01_project_structure.md  02_architecture_patterns.md  03_api_contracts.md  04_risk_analysis.md  05_database_design.md
docs/sprints/: sprint_1_report.md  sprint_2_0_report.md  sprint_2_5_report.md  sprint_2_6_report.md  sprint_3_audit_report.md  sprint_3_phase1_report.md  sprint_3_phase2_report.md  sprint_4_report.md  sprint_5_0_report.md  sprint_5_1_report.md
(+16 files in other folders)
