[project]
name = "winnow"
version = "0.1.0"
description = "QA framework for user submitted data in citizen science projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
