[project]
name = "winnow"
version = "0.1.0"
description = "QA framework for user submitted data in citizen science projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "greenlet>=3.1.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-json-logger>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "anyio>=4.12.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
